tests/NormalTests/paczka1/fuzzy1/51151990.err
Error in line 7: 2Cxq5G3qHT S679 65,7
Error in line 15: TMgHXRndS S259 10,1
Error in line 31: TpNRpU6 A197 62,6
